# PrismGuard

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  requirements.txt  start.sh
.cargo/: config.toml
.github/workflows/: ghcr.yml  tests.yml
ai_proxy/: app.py
ai_proxy/moderation/smart/: ai.py  bow.py  fasttext_model.py  fasttext_model_jieba.py  profile.py  sample_store_service.py  scheduler.py  storage.py
ai_proxy/proxy/: router.py  stream_checker.py  stream_transformer.py  upstream.py
ai_proxy/transform/formats/: claude_chat.py  openai_chat.py  openai_responses.py  parser.py
artifacts/: prismguard-rust-appended-push.txt  prismguard-rust-appended.bundle
configs.example/mod_profiles/default/: profile.json
docs/: CONFIG_UPGRADE_GUIDE.md  FASTTEXT_API_UPDATE.md  FASTTEXT_MIGRATION.md  MANUAL_TRAINING.md  NUMPY2_COMPATIBILITY.md
docs/superpowers/plans/: 2026-04-03-rust-ai-moderation-runtime.md  (+8 more)
examples/: client_example.py  config_examples.py  disable_tools_demo.py  responses_stream_transform.py  stream_delay_header.py
py-scripts/: README.md  bench_inline_moderation.py  bench_single.py  eval_profile.py  gen_sample_text.py  pyproject.toml  repair_rocks_meta.py  stats_unknown_breakdown.py  stats_unknown_category.py
py-scripts/tests/: test_bench_inline_moderation.py
src/: config.rs  format.rs  main.rs  profile.rs  proxy.rs  response.rs  routes.rs  sample_rpc.rs  scheduler.rs  storage.rs  streaming.rs  training.rs
src/moderation/: basic.rs  bow.rs  extract.rs  fasttext.rs  hashlinear.rs  mod.rs  smart.rs
tests/: bow_runtime_parity_tests.rs  fasttext_runtime_parity_tests.rs  format_harness.rs  format_process_tests.rs  format_runtime.rs  hashlinear_runtime_jieba_parity_tests.rs  http_proxy_request_tests.rs  http_proxy_response_tests.rs  http_proxy_stream_tests.rs  moderation_runtime_tests.rs  pebble_compat_parity_tests.rs  scheduler_tests.rs  training_tests.rs
tools/: check_numpy_version.py  diagnose_fasttext_training.py  diagnose_training_data.py  evaluate_bow_model.py  evaluate_fasttext_model.py  evaluate_hashlinear_model.py  export_violations.py  fix_bow_model.py  search_violation_by_keyword.py  test_fasttext_model.py  test_stream_transformer_openai_chat_to_responses_tool_args.py  train_bow_model.py  train_fasttext_model.py  train_fasttext_model_jieba.py
(+7 files in other folders)
