[package]
name = "Prismguand-Rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.6.20", features = ["macros"] }
bytes = "1.10"
brotli = "3.5"
dotenvy = "0.15"
flate2 = "1.0"
futures-util = "0.3"
hyper = "0.14"
indexmap = "=2.2.6"
libc = "0.2"
md5 = "0.7"
reqwest = { version = "0.11.27", default-features = false, features = ["json", "stream", "rustls-tls"] }
rocksdb = { version = "=0.21.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "=2.4.1"
