[project]
name = "prismguard-py-scripts"
version = "0.1.0"
description = "Helper scripts for PrismGuard Rust (evaluate profiles via running HTTP service)."
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.0.0",
  "jieba>=0.42.0",
  "requests>=2.32.0",
  "rocksdict>=0.3.25",
  "scikit-learn>=1.5.0",
]

[tool.uv]
package = false
